Fix: Multi-selection checkboxes were not covering the cards fully because of minification dev: updated calc() functions to prevent issues caused by minification

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -1,4 +1,4 @@
-/* ElegantFin Theme for Jellyfin by lscambo13 */
+/*! ElegantFin Theme Nightly for Jellyfin by lscambo13 */
 
 /* Add-ons: Uncomment to enable */
 /* @import url(./assets/add-ons/media-bar-plugin-support-nightly.css); */
@@ -981,7 +981,7 @@ select {
 }
 
 .layout-mobile .card {
-    --padding: 1px;
+    --padding: 0px;
 }
 
 /* this makes the card sizes smaller when phone is in landscape mode */
@@ -1341,7 +1341,7 @@ select {
 }
 
 .layout-desktop #itemDetailPage:has(.detailImageContainer .person) .detailLogo {
-    top: calc(100vh - 1px - var(--secondaryItemPageNegativeSpace));
+    top: calc(100vh - var(--secondaryItemPageNegativeSpace));
 }
 
 .layout-mobile #itemDetailPage:has(.subtitle) .detailLogo {
@@ -2200,7 +2200,7 @@ progress + span {
 }
 
 .overflowBackdropCard .cardText-first + .itemSelectionPanel > .checkboxContainer {
-    height: calc(100% - 0em);
+    height: 100%;
 }
 
 .checkboxContainer .emby-checkbox:checked + span + .checkboxOutline.multiSelectCheckboxOutline {
@@ -2228,7 +2228,7 @@ progress + span {
 
 .cardFooter + .itemSelectionPanel > .checkboxContainer,
 .cardScalable + .itemSelectionPanel > .checkboxContainer {
-    height: calc(100% - 0em);
+    height: 100%;
 }
 
 .checkboxOutline.multiSelectCheckboxOutline {
@@ -3084,7 +3084,7 @@ div[data-role="controlgroup"] a.ui-btn-active {
 
 .sectionTitleTextButton > * {
     text-align: left;
-    /* !important are needed for proper alignment on phones */
+    /* the !important are needed for proper alignment on phones */
     padding: 0.3em 0 !important;
     margin: 0 0 !important;
     /* this prevents long library names from breaking into another line */
@@ -3520,7 +3520,7 @@ table:not(.MuiTable-root.MuiTable-stickyHeader) {
 }
 
 ul.MuiList-root.MuiMenu-list.MuiList-dense > div:first-child {
-    /* ! Don't change these units. They are rem because that is standard for MUI */
+    /* Don't change these units. They are rem because that is standard for MUI */
     gap: 0.5rem;
 }
 
